--- a/SingleStationFront/views/index.ejs
+++ b/SingleStationFront/views/index.ejs
@@ -79,10 +79,10 @@ return '<table cellpadding="5" cellspacing="0"'
     '<td>' + data.JOURNEYS_ENDED + '</td>' +
     '</tr>'+
     '<td><b>AVG DISTANCE(starting): </b></td>' +
-    '<td>' + data.AVG_STARTING_JOURNEYS_DIST + '</td>' +
+    '<td>' + data.AVG_STARTING_JOURNEY_DIST + '</td>' +
     '</tr>'+
     '<td><b>AVG DISTANCE(ending): </b></td>' +
-    '<td>' + data.AVG_ENDING_JOURNEYS_DIST + '</td>' +
+    '<td>' + data.AVG_ENDING_JOURNEY_DIST + '</td>' +
     '</tr>'+
     '</table>';
 }
