--- a/SingleStationFront/views/index.ejs
+++ b/SingleStationFront/views/index.ejs
@@ -46,7 +46,7 @@
     </head>
     <body>
         <div class="container">
-            <h1 class="text-center text-primary mt-3 mb-3">Station view</h1>
+            <h1 class="text-center text-primary mt-3 mb-3">Stations</h1>
 
             <div class="card">
                 <div class="card-header">Station data</div>
