--- a/Stations/views/index.ejs
+++ b/Stations/views/index.ejs
@@ -13,6 +13,7 @@
         <link href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css" rel="stylesheet">
 
         <title><%= title %></title>
+        <button type="button" id="myButton" onClick="$('#default').click()"style="float:left;margin-left:20px;">VALIDATE AND IMPORT</button>
         <style>
             table, th, td {
             border: 1px solid black;
@@ -77,6 +78,27 @@
 </html>
 
 <script>
+$('#myButton').click(function(){
+    alert("Importing and validating data.Please wait...")
+    $.ajax({
+     type:'get',
+     url:'../import/mainstations.py',
+     
+     success: function(data) {
+    
+        },
+    
+     error: function(request, status, error) {
+       
+     }
+     
+  });
+  setTimeout(function(){
+   window.location.reload(1);
+}, 60000);
+});
+
+
 function test(data) {
   if  (data.ADDRESS==null) {
     data.ADDRESS="not available"
@@ -122,7 +144,7 @@ return '<table cellpadding="5" cellspacing="0"'
 
 
 $(document).ready(function(){
-//var json = JSON.parse(data);
+
 var dataTable = $('#station_data').DataTable(
     {
     'processing' : true,
